--- a/tools/html-validator/CMakeLists.txt
+++ b/tools/html-validator/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable ( html-validator
     ../../app/src/main/cpp/sources/pbr/length_shorthand_property_checker.cpp
     ../../app/src/main/cpp/sources/pbr/length_value.cpp
     ../../app/src/main/cpp/sources/pbr/length_value_parser.cpp
+    ../../app/src/main/cpp/sources/pbr/line_height_property_checker.cpp
     ../../app/src/main/cpp/sources/pbr/link_html5_element.cpp
     ../../app/src/main/cpp/sources/pbr/number_parser.cpp
     ../../app/src/main/cpp/sources/pbr/position_property.cpp
