pbr: - DIV API has been extended
Editor:
- checkbox glyphs

--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -860,6 +860,7 @@
     <ClCompile Include="src\rect.cpp" />
     <ClCompile Include="src\render_session.cpp" />
     <ClCompile Include="src\save_state.cpp" />
+    <ClCompile Include="src\ui_checkbox.cpp" />
     <ClCompile Include="src\ui_close_button.cpp" />
     <ClCompile Include="src\ui_dialog_box.cpp" />
     <ClCompile Include="src\ui_label.cpp" />
@@ -963,6 +964,7 @@
     <ClInclude Include="include\render_session.hpp" />
     <ClInclude Include="include\save_state.hpp" />
     <ClInclude Include="include\theme.hpp" />
+    <ClInclude Include="include\ui_checkbox.hpp" />
     <ClInclude Include="include\ui_close_button.hpp" />
     <ClInclude Include="include\ui_dialog_box.hpp" />
     <ClInclude Include="include\ui_label.hpp" />
