Documentation: - Proper UI page developing
world 1x1:
- benchmark code has been removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,16 +278,15 @@ target_compile_options ( android-vulkan PRIVATE
 )
 
 # See docs/preprocessor-macros.md
-# FUCK - revent to dev build
 target_compile_definitions ( android-vulkan PRIVATE
     AV_ARM_NEON
-#    AV_DEBUG
+    AV_DEBUG
 #    AV_ENABLE_RENDERDOC
 #    AV_ENABLE_TRACE
-#    AV_ENABLE_VVL
+    AV_ENABLE_VVL
     AV_FREETYPE
     AV_NATIVE_MODE_PORTRAIT
-#    AV_STRICT_MODE
+    AV_STRICT_MODE
     VK_NO_PROTOTYPES
     VK_USE_PLATFORM_ANDROID_KHR
 )
