pbr: - correct CSS height for absolute position elements
Editor:
- UI slider development

--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -867,6 +867,7 @@
     <ClCompile Include="src\ui_label.cpp" />
     <ClCompile Include="src\ui_manager.cpp" />
     <ClCompile Include="src\ui_props.cpp" />
+    <ClCompile Include="src\ui_slider.cpp" />
     <ClCompile Include="src\widget.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -972,6 +973,7 @@
     <ClInclude Include="include\ui_label.hpp" />
     <ClInclude Include="include\ui_manager.hpp" />
     <ClInclude Include="include\ui_props.hpp" />
+    <ClInclude Include="include\ui_slider.hpp" />
     <ClInclude Include="include\widget.hpp" />
   </ItemGroup>
   <ItemGroup>
