--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -858,11 +858,13 @@
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release + ASAN|x64'">$(IntDir)core\vulkan_utils.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">$(IntDir)core\vulkan_utils.obj</ObjectFileName>
     </ClCompile>
+    <ClCompile Include="src\action.cpp" />
     <ClCompile Include="src\append_ui_child_element_event.cpp" />
     <ClCompile Include="src\crash_dump.cpp" />
     <ClCompile Include="src\div_ui_element.cpp" />
     <ClCompile Include="src\editor.cpp" />
     <ClCompile Include="src\hello_triangle_program.cpp" />
+    <ClCompile Include="src\history.cpp" />
     <ClCompile Include="src\keyboard_key_event.cpp" />
     <ClCompile Include="src\keys.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -968,6 +970,7 @@
     <ClInclude Include="..\..\app\src\main\cpp\include\vulkan_api.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\vulkan_loader.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\vulkan_utils.hpp" />
+    <ClInclude Include="include\action.hpp" />
     <ClInclude Include="include\append_ui_child_element_event.hpp" />
     <ClInclude Include="include\crash_dump.hpp" />
     <ClInclude Include="include\cursor.hpp" />
@@ -976,6 +979,7 @@
     <ClInclude Include="include\glyphs.hpp" />
     <ClInclude Include="include\hello_triangle_program.hpp" />
     <ClInclude Include="include\hello_triangle_vertex.hpp" />
+    <ClInclude Include="include\history.hpp" />
     <ClInclude Include="include\image_ui_element.hpp" />
     <ClInclude Include="include\keyboard_key_event.hpp" />
     <ClInclude Include="include\keys.hpp" />
